--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^18.0.3",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
+    "react-navigation": "^1.0.0-beta.11",
     "react-router-native": "^4.1.1"
   }
 }
