--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "dependencies": {
     "expo": "^18.0.3",
+    "faker": "^4.1.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
+    "react-native-elements": "^0.15.0",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-router-native": "^4.1.1"
   }
